@@ -8,7 +8,9 @@
 Spring的缓存注解只能public类型的方法上
 
 ### 查看jit汇编信息JVM配置
+```cmd
 -server -XX:+PrintCompilation -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly -XX:+LogCompilation -XX:LogFile=jit.log
+```
 
 ### Win10查看jit汇编信息报错
 - 错误
@@ -22,3 +24,11 @@ Could not load hsdis-amd64.dll; library not loadable; PrintAssembly is disabled
 http://vorboss.dl.sourceforge.net/project/fcml/fcml-1.1.1/hsdis-1.1.1-win32-amd64.zip
 
 下载对应版本解压得到dll，保存到jre\bin\server就可以了
+
+### 查看JVM的GC日志的JVM配置
+```cmd
+-server -verbose:gc -XX:+PrintGCDetails
+```
+
+### 查询list时，必须限制大小
+防止前端传来的参数没有严格校验导致全表查询，形成数据来太大的list，造成内存溢出错误
